--- a/index.html
+++ b/index.html
@@ -1,2 +1,37 @@
-<img src="riach.jpg" width="60%">
-<br>ようこそ学会研究院へ
+<body background="https://acs-ed.github.io/riac/bgc.PNG" style="background-repeat: 
+repeat; background-size:25% ">
+<center><img src="https://acs-ed.github.io/riac/riach.jpg" width="50%">
+<hr><font size="5"><b><font size="5" color="blue">＊ ようこそ学会研究院へ ＊</font></b><br>
+<i><a href="https://translate.google.com/translate?sl=ja&tl=en&u=https://acs-ed.github.io/riac/">English page is here.</i></a>
+<hr>
+<img src="https://acs-ed.github.io/riac/gakkaibldg.PNG" width="40%">
+<br>学会研究院第一ビル<hr></center>
+<div style=" padding:30px;">
+<font size="6">
+<b><font color="blue">関連サイト</font>
+<i><ul>
+<li><a href="https://acs-ed.github.io/acs/3430141214159265358979.html">菊阿学会（ACS）</a></li>
+<li><a href="https://acs-ed.github.io/sso/">共有保存機構（SSO）</a></li>
+<li><a href="https://keirinsha.github.io">啓倫社</a></li>
+<li><a href=" ">倫的義務協力振興会（りんしん）</a></li></ul>
+
+<b><font color="blue">お知らせ</font>
+<i><ul>
+<li>当院では、研究員を募集しています。詳しくは学会までお問合せ下さい。[22/10/19]</li>
+<li>当院のホームページが公開されました。[22/10/19]</li></ul>
+
+<b><font color="blue">研究報告</font>
+<i><ul>
+<li>生物の新指針（啓倫社出版）を公開しました。[22/06/11]</li>
+<li>阿部全書を公開しました。</li>
+<li>たった一輪の薔薇 を公開しました。</li>
+<li>マ行宙 を公開しました。</li>
+<li>大藝汰帝国憲法 を公開しました。</li>
+<li>はじめての藝汰を公開しました。</li>
+<li>掘鼻論入門 〜嗜癖説と態然説〜</li></ul>
+</b></b></b></i></i></i>
+</div>
+<hr>
+<font size="4">このホームページの作成・管理は、菊阿学会広報部が行っています。このホームページからリンクする各部局のホームページあるいは各部局のホームページからリンクするページは、当該部局ならびにそれぞれのページの作成者の責任において管理運営が行われています。<br>
+このホームページに関するお問い合わせは、下記のお問い合わせ先にお願いいたします。<br><i>菊阿学会広報部<br>
+e-mail: kikuagaku@gmail.com
