--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<title>学会研究院</title>
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 <body background="https://acs-ed.github.io/riac/bgc.PNG" style="background-repeat: 
 repeat; background-size:25% ">
 <center><img src="https://acs-ed.github.io/riac/riach.jpg" width="50%">
 <hr><font size="5"><b><font size="5" color="blue">＊ ようこそ学会研究院へ ＊</font></b><br>
-<i><a href="https://translate.google.com/translate?sl=ja&tl=en&u=https://acs-ed.github.io/riac/">English page is here.</i></a>
+<i><a href="https://translate.google.com/translate?sl=ja&tl=en&u=https://acs-ed.github.io/riac/">English page is here.</i></a><br>
+<div style="padding:10px 30px;font-family: 'M PLUS Rounded 1c', sans-serif;">学会研究院では，自然科学ならびに菊阿学を中心とした研究，およびその研究結果の出版を行っています。普通部ではテキストの作成や模擬試験の作成，菊阿学部では学位試験の作成や追求学研究を行っています。</div>
 <hr>
 <img src="https://acs-ed.github.io/riac/gakkaibldg.PNG" width="40%">
 <br>学会研究院第一ビル<hr></center>
