--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ repeat; background-size:25% ">
 </i>
 <b><font color="blue">研究報告</font>
 <i><ul>
+<li>喰華学研究室を開設しました。</li>
 <li>生物の新指針（啓倫社出版）を公開しました。[22/06/11]</li>
 <li>阿部全書を公開しました。</li>
 <li>たった一輪の薔薇 を公開しました。</li>
